# j-chain

./: .env  Cargo.toml  readme.md
src/: handler.rs  main.rs  server.rs  test.rs  utils.rs  vs.rs
src/bc/: block.rs  block_chain.rs
src/db/: connect.rs
src/mote/: candidate.rs  mod.rs  user.rs  vote.rs  voter.rs
