[package]
name = "jchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
sha2 = "0.9"
rand = "0.9.0-alpha.1"
serde = "1.0.188"
futures = "0.3.28"
tokio = { version = "1.37.0", features = ["net", "rt", "time"] }
ink_lang  = "*"
serde_json = "1.0.115"
sysinfo = "0.30.10"
hyper = { version = "1.2.0", features = ["full"] }
tokio-tungstenite = { version = "0.20.0", default-features = false, features = ["handshake","stream"] }
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
futures-channel = "0.3.28"
url = "*"
http = "1.0"
http-body = "1.0.0"
bytes = "1"
pin-project-lite = "0.2.4"
socket2 = { version = "0.5", optional = true, features = ["all"] }
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }
tower-service ={ version = "0.3", optional = true }
tower = { version = "0.4.1", optional = true, default-features = false, features = ["make", "util"] }
http-body-util = "0.1.0"
hyper-util = { version = "0.1.3", features = ["full"] }
dotenv = "0.15.0"
tls-listener = "0.10.0"
hyper-tls = "0.6.0"
lazy_static = "1.4.0"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]


[dev-dependencies]
bytes = "1"
http-body-util = "0.1.0"
tokio = { version = "1", features = ["macros", "test-util"] }
tokio-test = "0.4"
pretty_env_logger = "0.5"
